# tapper

./: Cargo.toml  LICENSE  README.md
src/: app.rs  capture.rs  main.rs  pipeline.rs  tui.rs
tests/: integration.rs
