[package]
name = "tapper"
version = "0.1.0"
edition = "2021"
description = "A pipeline debugger for Unix shell commands"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
bytecount = "0.6"
ctrlc = "3"
libc = "0.2"

[profile.release]
lto = true
strip = true
